--- a/продвинутый/2/css/main.css
+++ b/продвинутый/2/css/main.css
@@ -902,10 +902,25 @@ h4 {
 .often-questions .accordion-heading span {
   border-bottom: 2px dotted #333;
 }
+.often-questions .accordion-heading.active+.accordion-block{
+  display: block;
+}
+
+
 .often-questions .accordion-block {
-  margin-top: 1rem;
   background-color: #f7e7e6;
-  padding: 3rem 4rem;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: all .5s ease-in;
+  /* display: none;
+  margin-top: 2rem;
+  padding: 1rem 4rem; */
+}
+.often-questions .accordion-block.active-content{
+  opacity: 1;
+  overflow: visible;
+  padding: 1rem 4rem;
 }
 .often-questions .accordion-block:before {
   content: '';
